--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,4 +1,5 @@
-.container {
+@import "./utils.scss"
+;.container {
   min-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
@@ -62,61 +63,44 @@
   font-size: 1.5rem;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
+.zip_input_container
+{
+  width: 500px;
+  height: 400px;
+  background-color: white;
+  border-radius: 30px;
+  box-shadow: 
+      0 15px 30px 0 rgba(0,0,0,0.05),
+      0 5px 15px 0 rgba(0,0,0,.05);
+    transition: ease box-shadow 0.3s;
+    &:hover {
+        box-shadow: 
+         0 15px 60px 0 rgba(0,0,0,0.08),
+         0 5px 25px 0 rgba(0,0,0,.08);
+       }
+  padding: 40px;
+  font-family: 'Lobster';
+  color: $light-green;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
+  justify-content: space-evenly;
 }
 
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+
+.input_area
+{
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+.address_input
+{
+  width: 80%;
+  height: 40px;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.nav_button
+{
+  width: 50px;
 }
