--- a/styles/Stores.module.scss
+++ b/styles/Stores.module.scss
@@ -8,5 +8,7 @@
 {
     margin-top: 20px;
     display: grid;
-    
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-row-gap: 15px;
+    grid-column-gap: 15px;
 }
