--- a/styles/components/cards/StoreCard.module.scss
+++ b/styles/components/cards/StoreCard.module.scss
@@ -1,6 +1,6 @@
 .store_card_container
 {
-    width: 400px;
+    width: 100%;
     height: 120px;
     background-color: white;
     border-radius: 20px;
