--- a/styles/Login.module.scss
+++ b/styles/Login.module.scss
@@ -138,7 +138,34 @@
 
 .login_issue
 {
+  height: 48px;
+  align-items: center;
+  justify-content: space-evenly;
   font-family: Helvetica;
   font-size: 12px;
   color: #AAAAAA;
+}
+
+.issues
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  p {
+    margin: 5px 0;
+    padding: 0 3px;
+  }
+}
+
+.issue_link
+{
+  align-items: center;
+  height: 14px;
+  margin: 5px 0;
+  color: $light-green;
+  border-bottom: 1px solid transparent;
+  &:hover {
+    cursor: pointer;
+    border-bottom: 1px solid;
+  }
 }
