--- a/styles/Login.module.scss
+++ b/styles/Login.module.scss
@@ -65,7 +65,7 @@
 .input_container
 {
   width: 500px;
-  height: 450px;
+  padding: 30px 30px;
   background-color: white;
   border-radius: 30px;
   box-shadow: 
