--- a/styles/StoreView.module.scss
+++ b/styles/StoreView.module.scss
@@ -1,5 +1,14 @@
 .main_container
 {
-    width: 100%;
-    padding: 40px;
+    padding: 2rem 10rem;
+}
+
+.item_grids
+{
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-row-gap: 15px;
+    grid-column-gap: 15px;
+    font-size: 16px;
 }
