--- a/styles/StoreView.module.scss
+++ b/styles/StoreView.module.scss
@@ -12,3 +12,22 @@
     grid-column-gap: 15px;
     font-size: 16px;
 }
+
+.store_header
+{
+    font-size: 70px;
+}
+
+.header_container
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.store_image
+{
+    width: 200px;
+    border-radius: 50px;
+}
