--- a/styles/StoreView.module.scss
+++ b/styles/StoreView.module.scss
@@ -1,3 +1,4 @@
+@import './utils.scss';
 .main_container
 {
     padding: 2rem 10rem;
@@ -30,4 +31,94 @@
 {
     width: 200px;
     border-radius: 50px;
+}
+
+.item_modal_container
+{
+  width: 100%;
+  height: 500px;
+  background-color: white;
+  padding: 35px;
+  display:flex;
+  .right_component {
+      padding: 20px;
+      width: 50%;
+        h3  {
+            margin: 5px 0;
+      }
+  }
+
+  .left_component {
+      width: 50%;
+  }
+
+  .modalbox_description
+  {
+      h5 {
+          margin: 9px 0px;
+      }
+      h4 {
+          margin: 10px 0px 9px;
+      }
+  }
+}
+
+.item_image
+{
+    width: 50%;
+}
+
+.image_container
+{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    button {
+        cursor: pointer;
+        outline: none;
+        border: none;
+        height: 50px;
+        background-color: transparent;
+        &:hover {
+            path {
+                fill: black;
+            }
+        }
+    }
+}
+
+.selection_area
+{
+  display: flex;
+  flex-direction: row;
+  padding: 0;
+  select {
+      height: 30px;
+      padding: 5px;
+      outline: none;
+      width: 50px;
+  }
+}
+
+.add_to_cart_button
+{
+    width: 125px;
+    margin: 0 0 0 20px;
+    background-color: $light-orange;
+    font-weight: 500;
+    outline: none;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    color: white;
+    padding: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.select_cart
+{
+    display: flex;
+    align-items: center;
 }
