--- a/styles/StoreView.module.scss
+++ b/styles/StoreView.module.scss
@@ -138,12 +138,13 @@
          0 5px 25px 0 rgba(0,0,0,.08);
        }
        &::after {
+           z-index: 1000;
         display: block;
         content: '';
         position: absolute;
         width: 50%;
-        height: 50px;
-        transform: translateX(-100%);
+        height: 200px;
+        transform: translateX(-30%);
         background: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4), transparent);
         animation: loading 2.0s infinite;
       }
