shopping cart update

--- a/styles/components/cards/ModalBox.module.scss
+++ b/styles/components/cards/ModalBox.module.scss
@@ -29,6 +29,13 @@
   justify-content: center;
 }
 
+.right_main_container{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
 .main_container_default{
   width: 100%;
   height: 100%;
