--- a/styles/Profile.module.scss
+++ b/styles/Profile.module.scss
@@ -112,7 +112,7 @@
 .content
 {
   width: 80%;
-  height: 80%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -126,17 +126,28 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: left;
+  margin-top: 10px;
   h4 {
     padding-bottom: 0;
-    margin: 0 0 5px 0;
+    margin: 0;
   }
   p {
-    padding: 0 0 0 5px;
+    padding: 0;
     margin: 0;
     color: #AAAAAA;
   }
 }
 
+.profile_pic
+{
+  width: 30%;
+  border-radius: 20px;
+}
+
+.section_info
+{
+  color: #AAAAAA
+}
 
 .submit_button
 {
