profile edit start

--- a/styles/Profile.module.scss
+++ b/styles/Profile.module.scss
@@ -1,5 +1,5 @@
-@import "./utils.scss"
-;.container {
+@import "./utils.scss";
+.container {
   min-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
@@ -62,25 +62,19 @@
   font-size: 1.5rem;
 }
 
-.main_container
-{
+.main_container {
   width: 600px;
-  height: 650px;
   background-color: white;
   border-radius: 30px;
-  box-shadow: 
-      0 15px 30px 0 rgba(0,0,0,0.05),
-      0 5px 15px 0 rgba(0,0,0,.05);
-    transition: ease box-shadow 0.3s;
-    &:hover {
-        box-shadow: 
-         0 15px 60px 0 rgba(0,0,0,0.08),
-         0 5px 25px 0 rgba(0,0,0,.08);
-       }
+  box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.05), 0 5px 15px 0 rgba(0, 0, 0, 0.05);
+  transition: ease box-shadow 0.3s;
+  &:hover {
+    box-shadow: 0 15px 60px 0 rgba(0, 0, 0, 0.08), 0 5px 25px 0 rgba(0, 0, 0, 0.08);
+  }
   padding: 50px;
   margin: 50px;
   h1 {
-    font-family: 'Lobster';
+    font-family: "Lobster";
     margin: 20px;
   }
   color: $light-green;
@@ -90,8 +84,7 @@
   /*justify-content: space-evenly;*/
 }
 
-.input_title
-{
+.input_title {
   height: 80px;
   color: $light-green;
   display: flex;
@@ -105,12 +98,11 @@
     margin: 0;
     font-family: Helvetica;
     font-size: 12px;
-    color: #AAAAAA;
+    color: #aaaaaa;
   }
 }
 
-.content
-{
+.content {
   width: 80%;
   height: 100%;
   display: flex;
@@ -119,38 +111,42 @@
   align-items: center;
 }
 
-.section
-{
+.section {
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: left;
-  margin-top: 10px;
+  margin: 10px 0 10px 0;
   h4 {
     padding-bottom: 0;
-    margin: 0;
+    margin: 0 0 5px 0;
   }
   p {
     padding: 0;
     margin: 0;
-    color: #AAAAAA;
+    color: #aaaaaa;
   }
 }
 
-.profile_pic
-{
+.profile_pic {
   width: 30%;
   border-radius: 20px;
+  margin: auto;
+}
+
+.address_container {
+  color: #aaaaaa;
+  display: flex;
+  flex-direction: column;
 }
 
 .section_info
 {
-  color: #AAAAAA
+  color: #aaaaaa;
 }
 
-.submit_button
-{
+.submit_button {
   width: 160px;
   margin: 20px;
   background-color: $light-green;
@@ -159,12 +155,34 @@
   outline: none;
   border: none;
   border-radius: 30px;
-  &:hover
-  {
-    cursor: pointer;
+  padding: 15px;
+  cursor: pointer;
+  color: white;
+  &:disabled {
+    background-color: lightgrey;
   }
-  p
+}
+
+
+.city_state
+{
+  display: flex;
+  span {
+    margin-right: 5px;
+  }
+}
+
+.input_area
+{
+  width: 100%;
+  height: 40px;
+  padding: 10px;
+  margin: 10px 0;
+  outline: none;
+  border: 1px solid #1717171A;
+  border-radius: 10px;
+  &::-webkit-input-placeholder
   {
-    color: white;
+    opacity: 0.2;
   }
 }
