--- a/styles/components/navbars/Navbar.module.scss
+++ b/styles/components/navbars/Navbar.module.scss
@@ -164,8 +164,9 @@
 .shopping_cart_container
 {
     width: 400px;
-    height: 100%;
+    height: 100vh;
     background-color: white;
+    overflow: auto;
     header {
         padding: 20px;
         background-color: $light-green;
@@ -178,6 +179,33 @@
         height: 70%;
         overflow: auto;
     }
+}
+
+.delivery_info
+{
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    div {
+        margin: 5px 0 5px 0;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+.checkout_button
+{
+    margin-top: 20px;
+    padding: 20px;
+    background-color: $light-orange;
+    color: white;
+    border: none;
+    outline: none;
+    border-radius: 30px;
+    font-weight: 700;
+    font-size: 15px;
+    cursor: pointer;
 }
 
 
