--- a/styles/Checkout.module.scss
+++ b/styles/Checkout.module.scss
@@ -1,14 +1,15 @@
 @import './utils.scss';
 .main
 {
-    flex: 1;
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.container {
+.main_container
+{
     min-height: 100vh;
     padding: 0 0.5rem;
     display: flex;
@@ -17,3 +18,29 @@
     align-items: center;
   }
 
+  .container {
+    width: 550px;
+    height: 750px;
+    padding: 30px 30px;
+    background-color: white;
+    border-radius: 30px;
+    box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.05), 0 5px 15px 0 rgba(0, 0, 0, 0.05);
+    transition: ease box-shadow 0.3s;
+    &:hover {
+        box-shadow: 0 15px 60px 0 rgba(0, 0, 0, 0.08), 0 5px 25px 0 rgba(0, 0, 0, 0.08);
+    }
+    padding: 50px;
+    h1 {
+        font-family: "Lobster";
+        margin: 20px;
+        color: $light-green;
+    }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.address_section .payment_method_section{
+  width: 75%;
+}
