--- a/styles/components/cards/checkout/Addresses.module.scss
+++ b/styles/components/cards/checkout/Addresses.module.scss
@@ -77,3 +77,27 @@
 {
     margin-top: 10px;
 }
+
+.address_container
+{
+    width: 550px;
+    padding: 30px 30px;
+    background-color: white;
+    border-radius: 30px;
+    box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.05), 0 5px 15px 0 rgba(0, 0, 0, 0.05);
+    transition: ease box-shadow 0.3s;
+    &:hover {
+        box-shadow: 0 15px 60px 0 rgba(0, 0, 0, 0.08), 0 5px 25px 0 rgba(0, 0, 0, 0.08);
+    }
+    padding: 50px;
+    h1 {
+        font-family: "Lobster";
+        margin: 20px;
+        color: $light-green;
+    }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 20px;
+}
