added driver page

--- a/styles/Profile.module.scss
+++ b/styles/Profile.module.scss
@@ -186,3 +186,13 @@
     opacity: 0.2;
   }
 }
+
+.driver {
+  padding: 10px;
+  color: white;
+  background-color: $light-orange;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
