finished driver page

--- a/styles/components/cards/ShopItem.module.scss
+++ b/styles/components/cards/ShopItem.module.scss
@@ -14,7 +14,8 @@
     }
 }
 
-.name {
+.name 
+{
     font-weight: 700;
     color: $light-orange;
 }
@@ -41,13 +42,15 @@
 }
 
 
-.name_order {
+.name_order 
+{
     width: 100%;
     font-weight: 700;
     color: $light-orange;
 }
 
-    .product_info_order {
+    .product_info_order 
+    {
         width: 100%;
         margin-left: 15px;
         display: flex;
