--- a/styles/Driver.module.scss
+++ b/styles/Driver.module.scss
@@ -1,5 +1,6 @@
 @import "./utils.scss";
-.container {
+.container 
+{
     min-height: 100vh;
     padding: 0 0.5rem;
     display: flex;
@@ -8,7 +9,8 @@
     align-items: center;
 }
 
-.main {
+.main 
+{
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -16,7 +18,9 @@
     align-items: center;
 }
 
-.main_container {
+.main_container 
+{
+    
     width: 600px;
     background-color: white;
     border-radius: 30px;
@@ -52,7 +56,7 @@
 
 .delivery_info_container
 {
-    margin: 0 0 25px;
+    margin: 15px 0 25px;
     width: 100%;
     min-height: 90px;
     display: flex;
