--- a/styles/Driver.module.scss
+++ b/styles/Driver.module.scss
@@ -77,3 +77,19 @@
     cursor: pointer;
     }
 }
+
+.driver_rating_container
+{
+    margin: 10px 0 20px;
+}
+
+.rating_bar{
+    width: 300px;
+    height: 10px;
+    background-color: $light-orange;
+}
+
+.like_bar{
+    height: 100%;
+    background-color: $light-green;
+}
