--- a/styles/Orders.module.scss
+++ b/styles/Orders.module.scss
@@ -17,7 +17,6 @@
 }
 
 .main_container {
-    
     width: 600px;
     background-color: white;
     border-radius: 30px;
@@ -40,8 +39,7 @@
     /*justify-content: space-evenly;*/
 }
 
-.address_container
-{
+.address_container {
     display: flex;
     flex-direction: column;
     color: $light-green;
@@ -51,8 +49,7 @@
     }
 }
 
-.delivery_info_container
-{
+.delivery_info_container {
     margin: 0 0 25px;
     width: 100%;
     min-height: 90px;
@@ -67,19 +64,48 @@
         padding: 10px;
         border-radius: 15px;
         box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.05), 0 5px 15px 0 rgba(0, 0, 0, 0.05);
-    transition: ease box-shadow 0.3s;
-    &:hover {
-        box-shadow: 0 15px 60px 0 rgba(0, 0, 0, 0.08), 0 5px 25px 0 rgba(0, 0, 0, 0.08);
-    }
-    cursor: pointer;
+        transition: ease box-shadow 0.3s;
+        &:hover {
+            box-shadow: 0 15px 60px 0 rgba(0, 0, 0, 0.08), 0 5px 25px 0 rgba(0, 0, 0, 0.08);
+        }
+        cursor: pointer;
     }
 }
 
+@mixin rating {
+    color: white;
+    border: 1px solid;
+    display: flex;
+    padding: 10px;
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    cursor: pointer;
+    background-color: transparent;
+        &:hover {
+            box-shadow: 0 15px 60px 0 rgba(0, 0, 0, 0.08), 0 5px 25px 0 rgba(0, 0, 0, 0.08);
+        }
+}
 
-
-.total_price
-{
+.total_price {
     display: block;
     color: $light-green;
     margin: 20px 0 10px;
+}
+
+.rating_container {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    margin-top: 20px;
+    .like {
+        @include rating;
+        border-color: $light-green;
+    }
+    .dislike {
+        @include rating;
+        border-color: $light-orange;
+    }
 }
