--- a/styles/Driver.module.scss
+++ b/styles/Driver.module.scss
@@ -81,6 +81,11 @@
 .driver_rating_container
 {
     margin: 10px 0 20px;
+    display: flex;
+    align-items: center;
+    span {
+        margin: 0 20px;
+    }
 }
 
 .rating_bar{
