--- a/styles/components/navbars/Navbar.module.scss
+++ b/styles/components/navbars/Navbar.module.scss
@@ -26,7 +26,11 @@
         align-items: center;
     }
 }
-
+.website_logo
+{
+    width: 61px;
+    height: 61px;
+}
 .nav_elements
 {
     display: flex;
