--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -16,6 +16,26 @@
   align-items: center;
 }
 
+.website_logo
+{
+  width: 150px;
+  height: 150px;
+  margin-left: -10px;
+}
+
+.site_title
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  span {
+    font-family: sans-serif;
+    font-size: 20px;
+    color: #473033;
+  }
+}
+
 .footer {
   width: 100%;
   height: 100px;
