--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -6,6 +6,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: url(../images/avocado_background1.jpg) 40% 0 no-repeat fixed;
+  background-size: 100%;
 }
 
 .main {
@@ -39,7 +41,8 @@
 .footer {
   width: 100%;
   height: 100px;
-  border-top: 1px solid #eaeaea;
+  //background-color: #EDEDED;
+  //border-top: 1px solid #eaeaea;
   display: flex;
   justify-content: center;
   align-items: center;
