added environment variables

--- a/styles/components/navbars/Navbar.module.scss
+++ b/styles/components/navbars/Navbar.module.scss
@@ -70,7 +70,7 @@
         align-items: center;
         display: flex;
         li {
-            padding: 0 10px;
+            padding: 0 8px;
             transition: 0.5s;
             max-height: 100%;
         }
@@ -88,7 +88,7 @@
 {
     display: flex;
     align-items: center;
-    margin-left: 10px;
+    //margin-left: 10px;
     border-radius: 50%;
     cursor: pointer;
     transition: 0.5s;
