added image to background

--- a/styles/components/layouts/Layout.module.scss
+++ b/styles/components/layouts/Layout.module.scss
@@ -3,6 +3,6 @@
     position: absolute;
     top: 80px;
     width: 100%;
-    background: url(../images/avocado_background1.jpg) 40% 0 no-repeat fixed;
+    background: url(../../../images/avocado_background1.jpg) 40% 0 no-repeat fixed;
     background-size: 100%;
 }
