--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -163,3 +163,39 @@
 {
   margin: 10px 0 0 0;
 }
+
+.svg_loading
+{
+    width: 30px;
+    height: 30px;
+    animation: rotate 2s linear infinite;
+    circle
+    {
+        width: 100%;
+        height: 100%;
+        fill: none;
+        stroke-width: 2;
+        stroke: $light-green;
+        transform: translate(1px, 1px);
+        stroke-dasharray: 5;
+        stroke-dashoffset: 60;
+        animation: animate 700ms linear infinite;
+
+    }
+}
+
+@keyframes animate
+{
+    0%
+    {
+        stroke-dashoffset: 45;
+    }
+    50%
+    {
+        stroke-dashoffset: 30;
+    }
+    100%
+    {
+        stroke-dashoffset: 15;
+    }
+}
