--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -159,9 +159,20 @@
   text-align: center;
 }
 
-.check_all_stores
+.go_to_stores
 {
-  margin: 10px 0 0 0;
+  margin: auto;
+  margin-top: 15px;
+  width: 200px;
+  padding: 10px;
+  background-color: $light-green;
+  color: white;
+  font-weight: 700;
+  font-size: 12px;
+  border: none;
+  outline: none;
+  border-radius: 20px;
+  cursor: pointer;
 }
 
 .svg_loading
