--- a/styles/components/layouts/Layout.module.scss
+++ b/styles/components/layouts/Layout.module.scss
@@ -5,4 +5,5 @@
     width: 100%;
     background: url(../../../images/avocado_background1.jpg) 40% 0 no-repeat fixed;
     background-size: 100%;
+    height: calc(100vh - 80px);
 }
