--- a/styles/Driver.module.scss
+++ b/styles/Driver.module.scss
@@ -34,11 +34,12 @@
     h1 {
         font-family: "Lobster";
         margin: auto;
-        margin-bottom: 20px;
+        margin-bottom: 15px;
         color: $light-green;
     }
     display: flex;
     flex-direction: column;
+    align-items: center;
     
     /*justify-content: space-evenly;*/
 }
@@ -67,8 +68,8 @@
         background-color: $light-green;
         outline: none;
         border: none;
-        padding: 10px;
-        border-radius: 15px;
+        padding: 10px 20px;
+        border-radius: 30px;
         box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.05), 0 5px 15px 0 rgba(0, 0, 0, 0.05);
     transition: ease box-shadow 0.3s;
     &:hover {
@@ -80,7 +81,7 @@
 
 .driver_rating_container
 {
-    margin: 10px 0 20px;
+    margin: 10px 0 45px 0;
     display: flex;
     align-items: center;
     span {
