--- a/styles/components/cards/StoreCard.module.scss
+++ b/styles/components/cards/StoreCard.module.scss
@@ -1,3 +1,4 @@
+@import '../../utils.scss';
 .store_card_container
 {
     width: 100%;
@@ -26,4 +27,11 @@
     border-radius: 50%;
     object-fit: cover;
     margin-right: 10px;
+}
+
+.distance_calc
+{
+  color: $light-orange;
+  display: block;
+  margin-top: 5px;
 }
