--- a/styles/Driver.module.scss
+++ b/styles/Driver.module.scss
@@ -39,7 +39,6 @@
     }
     display: flex;
     flex-direction: column;
-    align-items: center;
     
     /*justify-content: space-evenly;*/
 }
@@ -79,6 +78,12 @@
     }
 }
 
+.rating_container
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .driver_rating_container
 {
     margin: 10px 0 45px 0;
